Closed Bug 821283 Opened 13 years ago Closed 13 years ago

Arrow on arrow panel rendered incorrectly when appearing to the side in rtl

Categories

(Core :: XUL, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla20

People

(Reporter: enndeakin, Assigned: enndeakin)

References

Details

Attachments

(1 file)

Attached patch Handle rtlSplinter Review
This is because the side flipping should occur for POPUPALIGNMENT_LEFTCENTER and POPUPALIGNMENT_RIGHTCENTER. A test is included in bug 798226.
Attachment #691798 - Flags: review?(neil)
Comment on attachment 691798 [details] [diff] [review] Handle rtl > // no need to flip the centered anchor types >- if (popupAnchor < POPUPALIGNMENT_LEFTCENTER) { >+ if (popupAnchor <= POPUPALIGNMENT_LEFTCENTER) { So, this is the crux of the code - the word "vertically" should probably be added to the comment. The rest appears to be just to take care of the fallout from changing the value of POPUPALIGNMENT_RIGHTCENTER to work here.
Attachment #691798 - Flags: review?(neil) → review+
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla20
Flags: in-testsuite+
Assignee: nobody → enndeakin
Component: XP Toolkit/Widgets: XUL → XUL
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: