Bug 821283, anchor for popup should be flipped for horizontal centred positions, as this was causing the arrow on the arrow panel to appear reversed in rtl, r=neil